<resources>
    <string name="app_name">Android 101</string>
    <string name="common_hello_world">Hello World!</string>
    <string name="hello_world_msg">Hello World! #%1$d</string>
    <string name="txt_hello">Hello</string>
    <string name="btn_say_hi">Say Hi</string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="hint_enter_lastname">Enter your lastname</string>
    <string name="error_msg_name">Please enter your name</string>
    <string name="error_msg_lastname">Please enter your lastname</string>
    <string name="say_hello">Hello %1$s %2$s!</string>
    <string name="btn_hey_chuck">Hey Chuck!</string>
    <string name="error_msg_jokes">Error requesting jokes. Please try again!</string>

</resources>
