<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_top"
        android:text="@string/common_hello_world" />

    <Button
        android:id="@+id/btn_say_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_say_hi" />

    <Button
        android:id="@+id/btn_hey_chuck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_hey_chuck" />

</LinearLayout>
